--- a/CCSB/CCSB/CCSB.csproj
+++ b/CCSB/CCSB/CCSB.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Models\ViewModels\" />
   </ItemGroup>
 
